Fixed Image Stretch via Mobile

--- a/varieties.css
+++ b/varieties.css
@@ -165,7 +165,7 @@ li a:hover{
 }
 
 .flowers{
-    height:300px;
+    max-height:300px;
     width: auto;
 }
 
@@ -278,7 +278,7 @@ li a:hover{
         margin: 5px 0;
     }
     .flowers{
-        
+        max-height: 100%;
         max-width: 100%;
     }
 }
@@ -321,7 +321,7 @@ li a:hover{
         margin: 5px 0;
     }
     .flowers{
-        
+        max-height: 100%;
         max-width: 100%;
     }
 }
@@ -364,7 +364,7 @@ li a:hover{
         margin: 5px 0;
     }
     .flowers{
-        
+        max-height: 100%;
         max-width: 100%;
     }
 }
@@ -407,7 +407,7 @@ li a:hover{
         margin: 5px 0;
     }
     .flowers{
-        
+        max-height: 100%;
         max-width: 100%;
     }
 }
